syntax = "proto3";
option go_package = "/chat";
package pb;
import "common/baseinfo.proto";
// 纯文本聊天消息
message ChatTextReq {
	int32 channel   = 1;  //发送到哪个频道
	int64 targetUid = 2;  //发送给谁
	int64 clubId    = 3;  //如果是发送群消息，传入群id
	string cont     = 4; //消息内容
}
message ChatTextResp {
	int32 channel   = 1;  //发送到哪个频道
	int64 senderUid = 2;  //发送者UID
	int64 targetUid = 3;  //发送给谁
	int64 clubId    = 4;  //如果是发送群消息，传入群id
	int64 timeStamp = 5;  //发送消息时的时间戳
	string cont      = 6; //消息内容
}
//邀请对战
message ChatSgxInviteReq {
	int64 senderUid = 1;  //发送者UID
	int64 targetUid = 2;  //邀请对象
	int64 gameEid   = 3;  //邀请玩哪个游戏
	string cont      = 4; //消息内容
}
message ChatSgxInviteResp {
	int64 senderUid  = 1;         //发送者UID
	int64 targetUid  = 2;         //邀请对象
	int64 gameEid    = 3;         //邀请玩哪个游戏
	string cont       = 4;        //消息内容
	UserInfo senderData = 5; //发送者信息
}
// 聊天记录
message ChatHisReq {
	int32 channel = 1;  //哪个频道
}
message ChatHisResp {
	int32 channel = 1;  //哪个频道
	repeated ChatTextResp datas = 2;  //历史消息
}
